<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.wine_notes_004.EditActivity">

    <item
        android:id="@+id/how_to_start"
        android:orderInCategory="100"
        android:title="@string/how_to_start"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_faq"
        android:orderInCategory="100"
        android:title="@string/action_faq"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_about_the_application"
        android:orderInCategory="100"
        android:title="@string/action_about_the_application"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_whats_new"
        android:orderInCategory="100"
        android:title="@string/action_whats_new"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_rate_and_review"
        android:orderInCategory="100"
        android:title="@string/action_rate_and_review"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_go_premium"
        android:orderInCategory="100"
        android:title="@string/action_go_premium" />

<!--    <item
        android:id="@+id/action_consume_premium"
        android:orderInCategory="100"
        android:title="@string/action_consume_premium" />-->

</menu>